--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,9 @@ ash-window = { version = "0.12", optional = true }
 winit = { version = "0.29", optional = true }
 raw-window-handle = { version = "0.6", optional = true }
 
+# Vulkan dependencies (vulkano)
+vulkano = "0.35.2"
+
 # Error handling
 thiserror = "1.0"
 anyhow = "1.0"
