--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [features]
 add_kernel = []
+spv = []
 
 [lib]
 crate-type = ["cdylib", "rlib"]
@@ -18,8 +19,8 @@ shared = { path = "../shared" }
 spirv-std = { git = "https://github.com/rust-gpu/rust-gpu", branch = "main" }
 
 
-[target.'cfg(not(any(target_arch = "spirv")))'.dependencies]
-rayon = "1.7"
+# [target.'cfg(not(any(target_arch = "spirv")))'.dependencies]
+# rayon = "1.7"
 
 [lints]
 workspace = true
