--- a/ops/Cargo.toml
+++ b/ops/Cargo.toml
@@ -17,11 +17,14 @@ crate-type = ["cdylib", "rlib"]
 
 
 [dependencies]
-## To depend on a crate that lives inside a Git workspace, you only need the git URL (and
-## optionally branch/rev/tag). Cargo will clone the repo and then pick the crate named
-## `spirv-std` from that workspace automatically. You must NOT combine `git` and `path`.
-spirv-std = { git = "https://github.com/rust-gpu/rust-gpu", branch = "main" }
 sparkler = { path = "../sparkler" }
+shared = { path = "../shared" }
+
+spirv-std = { git = "https://github.com/rust-gpu/rust-gpu", branch = "main" }
+
+quote = { version = "1" }
+proc-macro2 = "1"
+
 
 [build-dependencies]
 spirv-builder = { git = "https://github.com/rust-gpu/rust-gpu", branch = "main" }
