repeated application of adder across multiple sets of buffers

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ num_cpus = "1.16"
 parking_lot = "0.12"
 rayon = "1.8"
 rand = "0.8"
-
+smallvec = "1.15.1"
 
 # Vulkan dependencies (wgpu)
 wgpu = { version = "26.0", features = [
