Refactor Vulkan integration and shader management
- Simplified build process in build.rs by removing wgpu feature checks.
- Updated shader bindings in step_particles and wrap_particles functions.
- Added new compute shader for wrapping particles and vertex/fragment shaders for rendering.
- Removed wgpu error handling from error.rs.
- Enhanced main.rs to include global buffer to binding mappings for shaders.
- Modularized vulkano runner by separating buffer, descriptor sets, device, pipeline, and shader functionalities into distinct modules.
- Implemented buffer creation and filling logic in buffer.rs.
- Created descriptor set layout and pipeline creation logic in descriptor_sets.rs and pipeline.rs.
- Added shader module and entry point handling in shader.rs.
- Introduced shader buffer mapping for better management of shader resources.
- Included a tutorial source code for Vulkan windowing as a reference.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,20 +26,24 @@ smallvec = "1.15.1"
 facet = "0.29.1"
 
 # Vulkan dependencies (wgpu)
-wgpu = { version = "26.0", features = [
-  "spirv",
-  "vulkan-portability",
-], optional = true }
+# wgpu = { version = "26.0", features = [
+#   "spirv",
+#   "vulkan-portability",
+# ], optional = true }
 pollster = { version = "0.3", optional = true }
 futures = { version = "0.3", optional = true }
 
 # Vulkan dependencies (ash)
-ash = { version = "0.38", optional = true }
-ash-window = { version = "0.12", optional = true }
-raw-window-handle = { version = "0.6", optional = true }
+# ash = { version = "0.38", optional = true }
+# ash-window = { version = "0.12", optional = true }
+# raw-window-handle = { version = "0.6", optional = true }
 
 # Vulkan dependencies (vulkano)
 vulkano = { version = "0.35.2", optional = true }
+
+
+winit = "0.30.12"
+
 
 # Error handling
 thiserror = "1.0"
