--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ parking_lot = "0.12"
 rayon = "1.8"
 rand = "0.8"
 
+variadics_please = "1.1.0"
 
 pollster = { version = "0.3", optional = true }
 futures = { version = "0.3", optional = true }
